welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: type mismatch;
 found   : Unit
 required: Int
	if (you<3 || date<3){
                            ^